=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.015

=over

=item *

Fixed krang_createdb to stop after the first failed system
call. [Scott Lanning]

=item *

Added enhanced cache debugging code and a last-resort check in an
Apache log_handler to make sure the cache is off at the end of the
request. [Sam]

=item *

Moved setup of /etc/init.d link from krang_install into the Redhat
platform modules' finish_installation() methods.  This should allow
the Gentoo and Debian ports to proceed. [Sam]

=item *

Fixed build and installation system to work with a Perl that isn't
called 'perl' and in your path.  So, for example, if you've got a
binary called 'perl5.8.0' you can build Krang with it and install with
it. [Sam]

=item *

Added initial support for Gentoo 1.4.3. [Peter]

=item *

Updated porting.pod with steps that might really work. [Sam]

=item *

Fixed a bug where an error occuring during preview triggered a
Krang::Cache error which corrupted the display. [Sam]

=item *

Improved error message generated when InstanceElementSet is set to an
element set that isn't installed. [Peter]

=item *

Fixed a ton of whitespace in module source files which was breaking
the POD output. [Peter]

=back

=head2 v1.014

=over

=item *

First public release of Krang!

=back